--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 20px;
+    flex-wrap: wrap;
 }
 
 #photos .photos-container img {
